objects/privateAppEx__Log__c.object
<CustomObject>
    <description>Logs to capture information to assist with debugging if needed.</description>
    <fields>
        <fullName>privateAppEx__Category__c</fullName>
        <description>The category of the logged event.</description>
        <inlineHelpText>The category of the logged event.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Data__c</fullName>
        <description>The data captured in the logged event.</description>
        <inlineHelpText>The data captured in the logged event.</inlineHelpText>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Exception__c</fullName>
        <description>Details of the exception thrown in the logged event.</description>
        <inlineHelpText>Details of the exception thrown in the logged event.</inlineHelpText>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Severity__c</fullName>
        <description>Severity of the logged event.</description>
        <inlineHelpText>Severity of the logged event.</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>privateAppEx__StackTraceId__c</fullName>
        <description>A unique ID for the particular type of error. Can be used to track how often the error occurs.</description>
        <inlineHelpText>A unique ID for the particular type of error. Can be used to track how often the error occurs.</inlineHelpText>
        <label>Stack Trace ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>privateAppEx__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>privateAppEx__Exception__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>